force-app/main/default/objects/custom_create380__c/custom_create380__c.object-meta.xml
<CustomObject>
    <label>Custom created object380</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects380</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>