force-app/main/default/objects/custom_create380__c/fields/custom_create_380field530__c.field-meta.xml
<CustomField>
    <fullName>custom_create_380field530__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 380field530</label>
    <type>Checkbox</type>
</CustomField>